# simple-agent

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .sample.simple-agent.toml  .simple-agent.toml.example  AGENTS.md  DESIGN.md  Dockerfile  LICENSE  PUBLISHING.md  README.md  ToolFramework.py  agent.py  agent.sh  approve.sh  bridge.py  cat-tool-line-range-goal.md  chat.py  claude-model.txt  claude.py  claude.sh  claude_client.py  code-modernizer.sln  config.py  console_display.py  coverage.sh  coverage_badge.py  display.py  docker-compose.yml  download_voice_model.sh  entry-point-analysis-goal.md  find-dead-code.sh  find_dead_code.py  find_test_overlap.py  goal.md  hello.txt  helpers.py  install.sh  list_tools.sh  (+32 more)
.roo/: rules.md  system-prompt-code
.windsurf/: characterization-testing.md  identifying-entry-points.md  refactor-legacy-code-process.md  refactoring-process.md  rules.md
ExtractMethodTool/: Arguments.cs  CodeSelection.cs  ExtractMethod.cs  ExtractMethodTool.csproj  IRefactoring.cs  InlineMethod.cs  Program.cs  Project.cs  RefactorPlan.cs  arguments.json  readme.md
ExtractMethodTool.Tests/: ExtractMethodTests.CanExtractOnlyAPartThatReturns.verified.txt  ExtractMethodTests.CanExtractReturn.verified.txt  ExtractMethodTests.CanExtractSimpleSwitchWithReturn.verified.txt  ExtractMethodTests.CanExtractSwitchBodyWithReturn.verified.txt  ExtractMethodTests.cs  ExtractMethodTool.Tests.csproj  InlineMethodTests.CanInlineSimple.verified.txt  InlineMethodTests.cs
application/: agent.py  agent_result.py  chat.py  display.py  input.py  input_feed.py  persisted_messages.py  session.py  session_storage.py  tool_result.py
archive/: goal-add-starting-prompt.md
claude/: claude.py  claude_client.py  claude_config.py  test.sh  test_tool.py  tool_framework.py
custom_agents/: align-on-goal.agent.md  assignment-sinker.agent.md  blank.agent.md  brownfield-crafter.agent.md  crafter.agent.md  debug.agent.md  decompose-refactoring.agent.md  designer.agent.md  development.agent.md  eliminate-dead-code.agent.md  execute-refactoring.agent.md  greenfield-crafter.agent.md  haiku.agent.md  implement-refactor.agent.md  implement.agent.md  implementer.agent.md  make-it-pass.agent.md  mikado.agent.md  modularity-review.agent.md  mutation-test.agent.md  plan-refactoring.agent.md  plan.agent.md  planning.agent.md  preparatory-refactoring.agent.md  refactor.agent.md  refactoring-analysis.md  refine-scenarios.agent.md  review.agent.md  simple-task.agent.md  slicer.agent.md  slicing.agent.md  sonnet.agent.md  specification.agent.md  specify.agent.md  test-reviewer.agent.md  test-writer.agent.md  write-a-failing-test.agent.deactivated.md  write-a-failing-test.agent.md  write-bash-scripts.agent.md
doc/: centralize-tool-parsing.spec.md  circular-dependency-report.md  display_token_usage.spec.md  emoji_bracket_tool_syntax.spec.md  event-to-display-simplification.md  llm-error-bug.spec.md  magic-prompts.md  overview.md  preserve-indent-feature.md  process-flow-diagram.md  todos.md  tool-syntax-abstraction.spec.md
docs/: bridge.md  event-to-display-simplification.md  overview.md  session-continuation.md  textual_refactoring_opportunities.md  todos.md
extract-method-tool/: ExtractMethodRewriter.cs  Program.cs  RefactorPlan.cs  extract-method-tool.csproj  plan.json
infrastructure/: console_display.py  console_escape_detector.py  json_file_session_storage.py  session_storage.py  stdio.py
modernizer/: approvaltests_config.json  approve.sh  chat.py  claude_client.py  claude_client_mock.py  custom_reporter.py  list_tools.py  messages.py  modernizer.py  modernizer2.py  pyproject.toml  refactoring-plan.md  requirements-dev.txt  revert.sh  run_tool.py  system-prompt.md  system_prompt_generator.py
process/: align-on-goal.md  characterization-testing.md  debug.md  dependency-breaking-mikado.md  dependency-breaking.md  development-process.md  eliminate-dead-code.md  execute-refactoring.md  identify-code-smells.md  magic-prompts.md  make-it-pass.md  mutation-test.md  plan-refactoring.md  planning-process.md  preparatory-refactoring.md  refactor.md  refactoring-process.md  refine-scenarios.md  simple-task.md  write-a-failing-test.md  write-bash-scripts.md
refactoring-tools/: .gitignore  README-approve.md  approve.sh  debug_test.cs  refactor-extract-collaborator-interface.md  refactor-hard-dependency-plan.md  refactoring-plan.md  refactoring-tools.sln  style-guide-csharp.md  test.sh
simple_agent/: agent_factories.py  analysis.agent.md  analysis.agent.md.bak  bridge.py  code-review.agent.md  coding.agent.md  default.agent.md  list_tools.py  logging_config.py  main.py  orchestrator.agent.md  question.agent.md  run_tool.py  system-prompt.md  system_prompt_generator.py
tests/: agent_test.py  approve_sh_reporter.py  bridge_test.py  cat_tool_test.py  claude_client_test.py  conftest.py  custom_reporter.py  (+42 more)
(+689 files in other folders)
