[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple-agent"
version = "0.1.0"
description = "An agent as simple as possible"
readme = "README.md"
authors = [
    {name = "Gregor Riegler", email = "rieglerg85@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "approvaltests",
    "pytest-approvaltests",
    "pytest-mock",
]

[project.scripts]
agent = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest",
    "approvaltests",
    "pytest-approvaltests",
    "pytest-mock",
    "coverage>=7.6.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
