[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple-agent"
version = "0.1.0"
description = "A simple CLI based agent"
readme = "README.md"
authors = [
    {name = "Gregor Riegler", email = "rieglerg85@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["ai", "agent", "claude", "automation", "llm"]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "piper-tts>=1.3.0",
    "pygame>=2.6.1",
    "requests",
]
[project.urls]
Homepage = "https://github.com/gregorriegler/simple-agent"
Repository = "https://github.com/gregorriegler/simple-agent"
Issues = "https://github.com/gregorriegler/simple-agent/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "approvaltests",
    "pytest-approvaltests",
    "pytest-mock",
]

[project.scripts]
agent = "simple_agent.main:main"
[tool.hatch.build.targets.wheel]
packages = ["simple_agent"]
artifacts = [
    "system-prompt.md"
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "approvaltests",
    "pytest-approvaltests",
    "pytest-mock",
    "coverage>=7.6.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
