[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple-agent"
version = "0.1.0"
description = "A simple CLI based agent"
readme = "README.md"
authors = [
    {name = "Gregor Riegler", email = "rieglerg85@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["ai", "agent", "claude", "automation", "llm"]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "piper-tts>=1.3.0",
    "pygame>=2.6.1",
    "requests",
    "textual>=0.47.0",
    "pyyaml>=6.0.2",
    "treelib>=1.8.0",
    "httpx",
    "textual-serve>=1.1.3",
    "boto3>=1.42.24",
    "boto3-stubs[essential]>=1.42.24",
    "mypy-boto3-bedrock-runtime>=1.42.3",
]
[project.urls]
Homepage = "https://github.com/gregorriegler/simple-agent"
Repository = "https://github.com/gregorriegler/simple-agent"
Issues = "https://github.com/gregorriegler/simple-agent/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "approvaltests",
    "pytest-approvaltests",
    "pytest-mock",
    "pytest-xdist",
]

[project.scripts]
agent = "simple_agent.main:main"
[tool.hatch.build.targets.wheel]
packages = ["simple_agent"]

[tool.uv]
dev-dependencies = [
    "pytest",
    "approvaltests",
    "pytest-approvaltests",
    "pytest-mock",
    "pytest-asyncio",
    "coverage>=7.6.1",
    "pyright>=1.1.406",
    "pytest-cov>=7.0.0",
    "pytest-rerunfailures>=16.1",
    "respx",
    "pytest-httpserver>=1.1.3",
    "pytest-xdist",
    "ruff>=0.14.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = ["-n", "auto", "--dist=loadscope"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

